# ad-killer

./: .gitignore  README.md  main.py  pyproject.toml
ad_dataset/: README.md  __init__.py  data_manager.py  data_processor.py
