[project]
name = "ad-killer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "transformers",
    "requests",
    "pip",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "torchaudio>=2.10.0",
    "protobuf>=7.34.1",
    "cpm-kernels>=1.0.11",
    "gradio>=6.9.0",
    "mdtex2html>=1.3.2",
    "sentencepiece>=0.2.1",
    "accelerate>=1.13.0",
]
[tool.setuptools.packages.find]
include = ["ad_dataset*"]
[tools.setuptools.package-data]
ad_dataset = ["txt_toc_rule.json"]
